<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolact_ros2_3d</name>
  <version>1.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fergonzaramos@yahoo.es">Fernando González</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>eigen</build_depend>

  <depend>rclcpp</depend>
  <depend>gb_visual_detection_3d_msgs</depend>
  <depend>yolact_ros2_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>lifecycle_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
